fix(forms): form validation bar no longer bleeding through on mobile devices
changed z-index for form validation bar to prevent it from bleeding through backdrops

--- a/scss/third-parties/_ng-bootstrap.scss
+++ b/scss/third-parties/_ng-bootstrap.scss
@@ -230,6 +230,20 @@
   ngb-datepicker.dropdown-menu.show {
     z-index: $zindex-popover;
   }
+
+  @include media-breakpoint-down(sm) {
+    [ngbdropdown].show [ngbdropdowntoggle] {
+      z-index: $zindex-modal;
+    }
+
+    [ngbdropdown].show::after {
+      z-index: $zindex-modal-backdrop;
+    }
+    [ngbdropdownmenu].show {
+      z-index: $zindex-modal;
+
+    }
+  }
 }
 @keyframes expand{
   0%{
